@@ -68,6 +68,7 @@ public class ThreadPool implements Scheduler, Closeable {
         public static final String ANALYZE = "analyze";
         public static final String WRITE = "write";
         public static final String SEARCH = "search";
+        public static final String GROUP_BY = "group_by";
         public static final String MANAGEMENT = "management";
         public static final String FLUSH = "flush";
         public static final String REFRESH = "refresh";
@@ -115,23 +116,23 @@ public class ThreadPool implements Scheduler, Closeable {
     public static final Map<String, ThreadPoolType> THREAD_POOL_TYPES;
 
     static {
-        HashMap<String, ThreadPoolType> map = new HashMap<>();
-        map.put(Names.SAME, ThreadPoolType.DIRECT);
-        map.put(Names.GENERIC, ThreadPoolType.SCALING);
-        map.put(Names.LISTENER, ThreadPoolType.FIXED);
-        map.put(Names.GET, ThreadPoolType.FIXED);
-        map.put(Names.ANALYZE, ThreadPoolType.FIXED);
-        map.put(Names.WRITE, ThreadPoolType.FIXED);
-        map.put(Names.SEARCH, ThreadPoolType.FIXED);
-        map.put(Names.MANAGEMENT, ThreadPoolType.SCALING);
-        map.put(Names.FLUSH, ThreadPoolType.SCALING);
-        map.put(Names.REFRESH, ThreadPoolType.SCALING);
-        map.put(Names.WARMER, ThreadPoolType.SCALING);
-        map.put(Names.SNAPSHOT, ThreadPoolType.SCALING);
-        map.put(Names.FORCE_MERGE, ThreadPoolType.FIXED);
-        map.put(Names.FETCH_SHARD_STARTED, ThreadPoolType.SCALING);
-        map.put(Names.FETCH_SHARD_STORE, ThreadPoolType.SCALING);
-        THREAD_POOL_TYPES = Collections.unmodifiableMap(map);
+        THREAD_POOL_TYPES = Map.ofEntries(
+            Map.entry(Names.SAME, ThreadPoolType.DIRECT),
+            Map.entry(Names.GENERIC, ThreadPoolType.SCALING),
+            Map.entry(Names.LISTENER, ThreadPoolType.FIXED),
+            Map.entry(Names.GET, ThreadPoolType.FIXED),
+            Map.entry(Names.ANALYZE, ThreadPoolType.FIXED),
+            Map.entry(Names.WRITE, ThreadPoolType.FIXED),
+            Map.entry(Names.SEARCH, ThreadPoolType.FIXED),
+            Map.entry(Names.GROUP_BY, ThreadPoolType.FIXED),
+            Map.entry(Names.MANAGEMENT, ThreadPoolType.SCALING),
+            Map.entry(Names.FLUSH, ThreadPoolType.SCALING),
+            Map.entry(Names.REFRESH, ThreadPoolType.SCALING),
+            Map.entry(Names.WARMER, ThreadPoolType.SCALING),
+            Map.entry(Names.SNAPSHOT, ThreadPoolType.SCALING),
+            Map.entry(Names.FORCE_MERGE, ThreadPoolType.FIXED),
+            Map.entry(Names.FETCH_SHARD_STARTED, ThreadPoolType.SCALING),
+            Map.entry(Names.FETCH_SHARD_STORE, ThreadPoolType.SCALING));
     }
 
     private final Map<String, ExecutorHolder> executors;
@@ -167,6 +168,7 @@ public class ThreadPool implements Scheduler, Closeable {
         builders.put(Names.GET, new FixedExecutorBuilder(settings, Names.GET, availableProcessors, 1000));
         builders.put(Names.ANALYZE, new FixedExecutorBuilder(settings, Names.ANALYZE, 1, 16));
         builders.put(Names.SEARCH, new FixedExecutorBuilder(settings, Names.SEARCH, searchThreadPoolSize(availableProcessors), 1000));
+        builders.put(Names.GROUP_BY, new FixedExecutorBuilder(settings, Names.GROUP_BY, halfProcMaxAt10, 500));
         builders.put(Names.MANAGEMENT, new ScalingExecutorBuilder(Names.MANAGEMENT, 1, 5, TimeValue.timeValueMinutes(5)));
         // no queue as this means clients will need to handle rejections on listener queue even if the operation succeeded
         // the assumption here is that the listeners should be very lightweight on the listeners side
